# transfer-r

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  README.md  configure  setup  update_buildignore.R  version
.gitlab/issue_templates/: new_gdx.md
docs/: api_reference.rst  conf.py  index.rst  release_notes.rst  requirements.txt
docs/_static/: custom.css
gamstransfer/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  cleanup  configure  configure.ac  cran-comments.md
gamstransfer/R/: Alias.R  BaseAlias.R  BaseContainer.R  ConstAlias.R  ConstContainer.R  ConstEquation.R  ConstParameter.R  ConstSet.R  ConstSymbol.R  ConstUniverseAlias.R  ConstVariable.R  Container.R  DomainViolation.R  Equation.R  Parameter.R  RcppExports.R  Set.R  SpecialValues.R  Super.R  Symbol.R  UniverseAlias.R  Variable.R  gamstransfer.R  gtr_R6.R  symbolTypes.R  utility.R
gamstransfer/man/: Alias.Rd  BaseContainer.Rd  BaseSymbol.Rd  ConstContainer.Rd  Container.Rd  DomainViolation.Rd  Equation.Rd  Parameter.Rd  Set.Rd  SpecialValues.Rd  Symbol.Rd  UniverseAlias.Rd  Variable.Rd  dot-Symbol.Rd  gamstransfer-package.Rd  gamstransfer.Rd  readGDX.Rd  writeGDX.Rd
gamstransfer/src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  Read.cpp  SpecialValues.cpp  Utilities.cpp  Write.cpp  gamsTransferR.cpp  gclgms.h  gdxcc.c  gdxcc.h  utilities.hpp
gamstransfer/tests/: testthat.R
gamstransfer/tests/testthat/: test-read.R
gamstransfer/tests/testthat/testdata/: acronym_test.gdx  biggdxtest.gdx  test1.gdx  test2.gdx  test25.gdx  test27.gdx  test3.gdx  test4.gdx  test40.gdx  test44.gdx  test49.gdx  test5.gdx  test53.gdx  test55.gdx  test6_uels.gdx  test70.gdx  test72.gdx  test73.gdx  test7_uels.gdx  test95.gdx  trnsport.gdx  trnsport_with_alias.gdx  universe_order.gdx
gtr/: .RData  .Rhistory  DESCRIPTION  NAMESPACE
(+65 files in other folders)
